feat: improve hybrid retrieval pipeline
Add query rewriting, dual-path HNSW/BM25 retrieval with RRF fusion, and qwen3-rerank reranking so the RAG pipeline can improve recall precision and expose retrieval-stage diagnostics.

Co-authored-by: Cursor <cursoragent@cursor.com>